Add `alt` attributes and provide text
Adding `alt` attribute and fill them with textual value
where useful and necessary.

Bug: T173629
Change-Id: I22c67ae596dfbe55f43164ee135bde7e7c8068e9

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -30,7 +30,7 @@
     <p><%= t('content.quote') %></p>
     <footer>
       <a href="https://commons.wikimedia.org/wiki/File:Flag_of_the_United_Nations.svg">
-      	<img src="./images/un_flag.png">
+      	<img src="./images/un_flag.png" alt="<%= t('content.quote_image') %>">
       </a>
       <p><%= t('content.cite') %></p>
     </footer>
@@ -39,7 +39,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:ready%20to%20travel%20again%3F%20%286225048795%29.jpg">
-    	<img src="./images/story_unreliable.jpg">
+    	<img src="./images/story_unreliable.jpg" alt="">
     </a>
     <h3><%= t('content.story_unreliable_title') %></h3>
     <p><%= t('content.story_unreliable_body') %></p>
@@ -48,7 +48,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:The_scales_of_justice_(4984060658).jpg">
-    	<img src="./images/story_jury.jpg" >
+    	<img src="./images/story_jury.jpg" alt="">
     </a>
     <h3><%= t('content.story_jury_title') %></h3>
     <p><%= t('content.story_jury_body') %></p>
@@ -57,7 +57,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Socks_2.0.jpeg">
-    	<img src="./images/story_official_use.jpg">
+    	<img src="./images/story_official_use.jpg" alt="">
     </a>
     <h3><%= t('content.story_official_use_title') %></h3>
     <p><%= t('content.story_official_use_body') %></p>
@@ -230,7 +230,7 @@
     <p><%= t('content.erasure_quote') %></p>
     <footer>
       <a href="https://commons.wikimedia.org/wiki/File:Das_Recht_auf_Wissen_%E2%80%93_f%C3%BCr_eine_progressive_Netzpolitik_(6996713652).jpg">
-      	<img src="./images/lawrence.png">
+      	<img src="./images/lawrence.png" alt="<%= t('content.erasure_quote_image') %>">
       </a>
       <p><%= t('content.erasure_cite') %></p>
     </footer>
@@ -239,7 +239,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Heavens_Above_Her.jpg">
-    	<img src="./images/story_dark_matter.jpg">
+    	<img src="./images/story_dark_matter.jpg" alt="">
     </a>
     <h3><%= t('content.story_dark_matter_title') %></h3>
     <p><%= t('content.story_dark_matter_body') %></p>
@@ -248,7 +248,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:2016-11_Chute_Montmorency_04.jpg">
-    	<img src="./images/story_deletion.jpg">
+    	<img src="./images/story_deletion.jpg" alt="">
     </a>
     <h3><%= t('content.story_deletion_title') %></h3>
     <p><%= t('content.story_deletion_body') %></p>
@@ -257,7 +257,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:BLASTS!_(8387139427).jpg">
-    	<img src="./images/story_missing.jpg">
+    	<img src="./images/story_missing.jpg" alt="">
     </a>
     <h3><%= t('content.story_missing_title') %></h3>
     <p><%= t('content.story_missing_body') %></p>
