--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -16,7 +16,7 @@
 		<h3><%= t('home.privacy') %></h3>
 		<hr>
 		<p>
-			<img class="icon" src="./images/userdata.svg">
+			<img class="icon" src="./images/userdata.svg" alt="">
 		</p>
 	</a>
 </div>
@@ -25,7 +25,7 @@
 		<h3><%= t('home.content') %></h3>
 		<hr>
 		<p>
-			<img class="icon" src="./images/content1.svg">
+			<img class="icon" src="./images/content1.svg" alt="">
 		</p>
 	</a>
 </div>
@@ -34,21 +34,21 @@
 		<h3><%= t('home.faq') %></h3>
 		<hr>
 		<p>
-			<img class="icon" src="./images/faq.svg">
+			<img class="icon" src="./images/faq.svg" alt="">
 		</p>
 	</a>
 </div>
 <div class="clear"></div>
 <div class="col-md-2"></div>
 <div class="col-md-10">
-<blockquote class="middle">
-    <p><%= t('home.quote') %></p>
-    <footer>
-      <a href="https://commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
-			<img src="./images/nadine.jpg">
-		</a>
-      <p><%= t('home.cite') %></p>
-    </footer>
-  </blockquote>
+	<blockquote class="middle">
+		<p><%= t('home.quote') %></p>
+		<footer>
+			<a href="https://commons.wikimedia.org/wiki/File:Nadine_Gordimer_01.JPG">
+				<img src="./images/nadine.jpg" alt="<%= t('home.cite_image') %>">
+			</a>
+			<p><%= t('home.cite') %></p>
+		</footer>
+	</blockquote>
 </div>
 <div class="clear">&nbsp;</div>
