--- a/source/localizable/stories.html.erb
+++ b/source/localizable/stories.html.erb
@@ -8,7 +8,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:ready%20to%20travel%20again%3F%20%286225048795%29.jpg">
-    	<img src="./images/story_unreliable.jpg">
+    	<img src="./images/story_unreliable.jpg" alt="">
     </a>
     <h3><%= t('content.story_unreliable_title') %></h3>
     <p><%= t('content.story_unreliable_body') %></p>
@@ -17,7 +17,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:The_scales_of_justice_(4984060658).jpg">
-    	<img src="./images/story_jury.jpg" >
+    	<img src="./images/story_jury.jpg" alt="">
     </a>
     <h3><%= t('content.story_jury_title') %></h3>
     <p><%= t('content.story_jury_body') %></p>
@@ -26,7 +26,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Socks_2.0.jpeg">
-    	<img src="./images/story_official_use.jpg">
+    	<img src="./images/story_official_use.jpg" alt="">
     </a>
     <h3><%= t('content.story_official_use_title') %></h3>
     <p><%= t('content.story_official_use_body') %></p>
@@ -37,7 +37,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Heavens_Above_Her.jpg">
-    	<img src="./images/story_dark_matter.jpg">
+    	<img src="./images/story_dark_matter.jpg" alt="">
     </a>
     <h3><%= t('content.story_dark_matter_title') %></h3>
     <p><%= t('content.story_dark_matter_body') %></p>
@@ -46,7 +46,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:2016-11_Chute_Montmorency_04.jpg">
-    	<img src="./images/story_deletion.jpg">
+    	<img src="./images/story_deletion.jpg" alt="">
     </a>
     <h3><%= t('content.story_deletion_title') %></h3>
     <p><%= t('content.story_deletion_body') %></p>
@@ -55,7 +55,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:BLASTS!_(8387139427).jpg">
-    	<img src="./images/story_missing.jpg">
+    	<img src="./images/story_missing.jpg" alt="">
     </a>
     <h3><%= t('content.story_missing_title') %></h3>
     <p><%= t('content.story_missing_body') %></p>
@@ -66,7 +66,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Globes_(214425074).jpg">
-    	<img src="./images/story_disputed.jpg">
+    	<img src="./images/story_disputed.jpg" alt="">
     </a>
     <h3><%= t('content.story_disputed_title') %></h3>
     <p><%= t('content.story_disputed_body') %></p>
@@ -75,7 +75,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Phone_booth_(144842591).jpg">
-    	<img src="./images/story_dial.jpg" >
+    	<img src="./images/story_dial.jpg" alt="">
     </a>
     <h3><%= t('content.story_dial_title') %></h3>
     <p><%= t('content.story_dial_body') %></p>
@@ -84,7 +84,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:A1_bei_Auhof.jpg">
-    	<img src="./images/story_trademark.jpg">
+    	<img src="./images/story_trademark.jpg" alt="">
     </a>
     <h3><%= t('content.story_trademark_title') %></h3>
     <p><%= t('content.story_trademark_body') %></p>
@@ -95,7 +95,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Nikon_FE_%2B_Nikon_24mm_f-2.8_AI_(7972298938).jpg">
-    	<img src="./images/story_license.jpg">
+    	<img src="./images/story_license.jpg" alt="">
     </a>
     <h3><%= t('content.story_license_title') %></h3>
     <p><%= t('content.story_license_body') %></p>
@@ -104,7 +104,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Graveyard_(2276296861).jpg">
-    	<img src="./images/story_grave.jpg">
+    	<img src="./images/story_grave.jpg" alt="">
     </a>
     <h3><%= t('content.story_grave__title') %></h3>
     <p><%= t('content.story_grave__body') %></p>
@@ -113,7 +113,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Wolpertinger.jpg">
-    	<img class="story_missing_link__img" src="./images/story_missing_link.jpg">
+    	<img class="story_missing_link__img" src="./images/story_missing_link.jpg" alt="">
     </a>
     <h3><%= t('content.story_missing_link_title') %></h3>
     <p><%= t('content.story_missing_link_body') %></p>
@@ -124,7 +124,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Zanni_mask.jpg">
-      <img class="story_zanni__img" src="./images/story_zanni.jpg">
+      <img class="story_zanni__img" src="./images/story_zanni.jpg" alt="">
     </a>
     <h3><%= t('content.story_zanni_title') %></h3>
     <p><%= t('content.story_zanni_body') %></p>
@@ -133,7 +133,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:PalazzoTrinci023.jpg">
-      <img class="story_dictating__img" src="./images/story_dictating.jpg" >
+      <img class="story_dictating__img" src="./images/story_dictating.jpg" alt="">
     </a>
     <h3><%= t('content.story_dictating_title') %></h3>
     <p><%= t('content.story_dictating_body') %></p>
@@ -142,7 +142,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Whisky_(4285804207).jpg">
-      <img src="./images/story_whisky.jpg">
+      <img src="./images/story_whisky.jpg" alt="">
     </a>
     <h3><%= t('content.story_whisky_title') %></h3>
     <p><%= t('content.story_whisky_body') %></p>
@@ -153,7 +153,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Illustration_of_Bernie_Sanders.jpg">
-      <img class="story_bern__img" src="./images/story_bern.jpg">
+      <img class="story_bern__img" src="./images/story_bern.jpg" alt="">
     </a>
     <h3><%= t('content.story_bern_title') %></h3>
     <p><%= t('content.story_bern_body') %></p>
@@ -162,7 +162,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Red_cinema_sits_(11285613595).jpg">
-      <img src="./images/story_cinema.jpg">
+      <img src="./images/story_cinema.jpg" alt="">
     </a>
     <h3><%= t('content.story_cinema_title') %></h3>
     <p><%= t('content.story_cinema_body') %></p>
@@ -171,7 +171,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Newspaper_(15840560238).jpg">
-      <img src="./images/story_newspaper.jpg">
+      <img src="./images/story_newspaper.jpg" alt="">
     </a>
     <h3><%= t('content.story_newspaper_title') %></h3>
     <p><%= t('content.story_newspaper_body') %></p>
@@ -181,21 +181,21 @@
 <br><br>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Fandango-chasselat.jpg"><img src="./images/story_dance.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Fandango-chasselat.jpg"><img src="./images/story_dance.png" alt=""></a>
     <h3><%= t('content.story_dance_title') %></h3>
     <p><%= t('content.story_dance_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Typewriter_(24111292).jpg"><img src="./images/story_copywrong.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Typewriter_(24111292).jpg"><img src="./images/story_copywrong.png" alt=""></a>
     <h3><%= t('content.story_copywrong_title') %></h3>
     <p><%= t('content.story_copywrong_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Hello_My_Name_Is_(15283079263).jpg"><img src="./images/story_change.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Hello_My_Name_Is_(15283079263).jpg"><img src="./images/story_change.png" alt=""></a>
     <h3><%= t('content.story_change_title') %></h3>
     <p><%= t('content.story_change_body') %></p>
   </div>
@@ -204,21 +204,21 @@
 <br><br>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Crayons_de_couleur_multicolores_(19472756278).jpg"><img src="./images/story_principle.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Crayons_de_couleur_multicolores_(19472756278).jpg"><img src="./images/story_principle.png" alt=""></a>
     <h3><%= t('content.story_principle_title') %></h3>
     <p><%= t('content.story_principle_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:BEOGRAM_1202_(19218616158).jpg"><img src="./images/story_letitgo.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:BEOGRAM_1202_(19218616158).jpg"><img src="./images/story_letitgo.png" alt=""></a>
     <h3><%= t('content.story_letitgo_title') %></h3>
     <p><%= t('content.story_letitgo_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Book_sale_loot_(4552277923).jpg"><img src="./images/story_bedtime.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Book_sale_loot_(4552277923).jpg"><img src="./images/story_bedtime.png" alt=""></a>
     <h3><%= t('content.story_bedtime_title') %></h3>
     <p><%= t('content.story_bedtime_body') %></p>
   </div>
@@ -229,7 +229,7 @@
 <!-- 2015 Stories-->
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Category:Vulpes_vulpes#/media/File:Kew_Gardens_-_London_-_September_2008_%282958753889%29.jpg">
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Category:Vulpes_vulpes#/media/File:Kew_Gardens_-_London_-_September_2008_%282958753889%29.jpg" alt="">
       <img src="./images/story_stock.png">
     </a>
     <h3 id="right-way"><%= t('content.story_stock_title') %></h3>
@@ -239,7 +239,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Barnstar#/media/File:Original_Barnstar_Hires.png">
-      <img src="./images/story_barnstar.png">
+      <img src="./images/story_barnstar.png" alt="">
     </a>
     <h3 id="home-made"><%= t('content.story_barnstar_title') %></h3>
     <p><%= t('content.story_barnstar_body') %></p>
@@ -248,7 +248,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Wiki#/media/File:Chiodini_wiki.jpg">
-      <img src="./images/story_identity.png">
+      <img src="./images/story_identity.png" alt="">
     </a>
     <h3 id="mistaken-identity"><%= t('content.story_identity_title') %></h3>
     <p><%= t('content.story_identity_body') %></p>
@@ -259,7 +259,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Category:Interiors_of_museums#/media/File:Preusser,_Karl_Louis_-_In_der_Dresdner_Galerie_-_1881.jpg">
-      <img src="./images/story_kempler.png">
+      <img src="./images/story_kempler.png" alt="">
     </a>
     <h3 id="copyrighting-facts"><%= t('content.story_kempler_title') %></h3>
     <p><%= t('content.story_kempler_body') %></p>
@@ -268,7 +268,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Screenshot_from_IMAX%C2%AE_3D_movie_Hidden_Universe_showing_the_Helix_Nebula_in_infrared.jpg">
-      <img src="./images/story_guru.png">
+      <img src="./images/story_guru.png" alt="">
     </a>
     <h3 id="citation-needed"><%= t('content.story_guru_title') %></h3>
     <p><%= t('content.story_guru_body') %></p>
@@ -277,7 +277,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:TaylorFillmore.jpg">
-      <img src="./images/story_political.png">
+      <img src="./images/story_political.png" alt="">
     </a>
     <h3 id="political-points"><%= t('content.story_political_title') %></h3>
     <p><%= t('content.story_political_body') %></p>
@@ -290,7 +290,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Coffee_Berries.jpg">
-      <img src="./images/story_coffee.png">
+      <img src="./images/story_coffee.png" alt="">
     </a>
     <h3 id="grounds-for-removal"><%= t('content.story_coffee_title') %></h3>
     <p><%= t('content.story_coffee_body') %></p>
@@ -299,7 +299,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="//en.wikipedia.org/wiki/File:Myanmar_visa.jpg">
-      <img src="./images/story_myanmar.png">
+      <img src="./images/story_myanmar.png" alt="">
     </a>
     <h3 id="unredacted"><%= t('content.story_myanmar_title') %></h3>
     <p><%= t('content.story_myanmar_body') %></p>
@@ -308,7 +308,7 @@
 <div class="col-md-4">
   <div class="story">
     <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Poster_of_Alexander_Crystal_Seer.jpg">
-      <img src="./images/story_seer.png">
+      <img src="./images/story_seer.png" alt="">
     </a>
     <h3 id="murky-future"><%= t('content.story_seer_title') %></h3>
     <p><%= t('content.story_seer_body') %></p>
@@ -320,21 +320,21 @@
 <!-- New DMCA -->
 <div class="col-md-4">
   <div class="story">
-    <img src="./images/story_missing.png">
+    <img src="./images/story_missing.png" alt="">
     <h3 id="doubling-down-dmca"><%= t('content.story_dmca_title') %></h3>
     <p><%= t('content.story_dmca_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Audio_Sound_Arts_Studio_Control_Room.jpg"><img src="./images/story_studio.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Audio_Sound_Arts_Studio_Control_Room.jpg"><img src="./images/story_studio.png" alt=""></a>
     <h3 id="no-take-backsies"><%= t('content.story_studio_title') %></h3>
     <p><%= t('content.story_studio_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <img src="./images/story_missing.png">
+    <img src="./images/story_missing.png" alt="">
     <h3 id="common-mistake"><%= t('content.story_mistake_title') %></h3>
     <p><%= t('content.story_mistake_body') %></p>
   </div>
@@ -345,21 +345,21 @@
 <!-- New Voluntary Disclosure -->
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="./images/story_emergency.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:LED_Verkehrssicherungsbalken.jpg"><img src="./images/story_emergency.png" alt=""></a>
     <h3 id="deadly-threat"><%= t('privacy.story_emergency_title') %></h3>
     <p><%= t('privacy.story_emergency_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="./images/story_whitehouse.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/White_House#mediaviewer/File:SouthPorticoChristmas.jpg"><img src="./images/story_whitehouse.png" alt=""></a>
     <h3 id="president-threats"><%= t('privacy.story_whitehouse_title') %></h3>
     <p><%= t('privacy.story_whitehouse_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="./images/story_suicide.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/File:Suicide_Prevention_Day.jpg"><img src="./images/story_suicide.png" alt=""></a>
     <h3 id="dealing-with-suicide"><%= t('privacy.story_suicide_title') %></h3>
     <p><%= t('privacy.story_suicide_body') %></p>
   </div>
@@ -370,21 +370,21 @@
 <!-- Old Content Alteration -->
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="./images/story_dcri.png"></a>
+    <a class="anchorImg" href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg" alt=""><img src="./images/story_dcri.png"></a>
     <h3 id="french-agency"><%= t('content.story1_title') %></h3>
     <p><%= t('content.story1_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="./images/story_monkey.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="./images/story_monkey.png" alt=""></a>
     <h3 id="monkey-selfie"><%= t('content.story2_title') %></h3>
     <p><%= t('content.story2_body') %></p>
   </div>
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="./images/story_aboriginal.png"></a>
+    <a class="anchorImg" href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="./images/story_aboriginal.png" alt=""></a>
     <h3 id="aboriginal"><%= t('content.story3_title') %></h3>
     <p><%= t('content.story3_body') %></p>
   </div>
@@ -395,7 +395,7 @@
 <!-- Old DMCA -->
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="./images/story_ruth.png"></a>
+    <a class="anchorImg" href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="./images/story_ruth.png" alt=""></a>
     <h3 id="babe-ruth">
       <%= t('content.s_t_babe_ruth') %>
     </h3>
@@ -404,7 +404,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <img src="./images/story_obama.png">
+    <img src="./images/story_obama.png" alt="">
     <h3 id="obama">
       <%= t('content.s_t_obama') %>
     </h3>
@@ -413,7 +413,7 @@
 </div>
 <div class="col-md-4">
   <div class="story">
-    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="./images/story_classics.png"></a>
+    <a class="anchorImg" href="https://commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="./images/story_classics.png" alt=""></a>
     <h3 id="the-classics">
       <%= t('content.s_t_classic') %>
     </h3>
