--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -57,7 +57,7 @@
 			<footer>
 				<div class="footer__block col-md-5">
 					<a href="<%= locale_url('./') %>" class="home_link">
-						<img src="./images/logo.png">
+						<img src="./images/logo.png" alt="">
 						<span><%= t('menu.title') %></span>
 					</a>
 				</div>
