Fix logo handling on screenreaders
Output logo title on homepage, hiding it visually and
enable it for screnreaders only.

Bug: T173629
Change-Id: I77326f4593e41a9316ea0eb442c979360eb4f82a

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -118,6 +118,16 @@ footer {
 	}
 }
 
+// Visually hide title on navbar on homepage, screenreaders still receive it
+.index .navbar-default .navbar-brand .name {
+	position: absolute;
+	overflow: hidden;
+	clip: rect( 0 0 0 0 );
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+}
+
 .container .jumbotron {
 	padding-left: 24px;
 	padding-top: 38px;
