--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -37,10 +37,8 @@
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="<%= locale_url('./') %>">
-							<img src="./images/logo.png">
-							<% if request.path != 'index.html'  %>
-								<span class="name"><%= t('menu.title') %></span>
-							<% end %>
+							<img src="./images/logo.png" alt="">
+							<span class="name"><%= t('menu.title') %></span>
 						</a>
 					</div>
 					<div id="navbar-collapse" class="collapse navbar-collapse">
